--- a/toh-pt6/src/app/dashboard/dashboard.component.html
+++ b/toh-pt6/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,2 @@
-<h2>Top Heroes</h2>
-<div class="heroes-menu">
-  <a *ngFor="let hero of heroes"
-      routerLink="/detail/{{hero.id}}">
-      {{hero.name}}
-  </a>
-</div>
-
-<app-hero-search></app-hero-search>
+<app-header></app-header>
+<app-radar-chart></app-radar-chart>
