route and barChart

--- a/EmotionFrontend/src/app/header/header.component.html
+++ b/EmotionFrontend/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header-container">
     <div class="logo" (click)="goToHome()">Emotion Analytics</div>
-    <div class="survey">Survey</div>
+    <div class="survey" (click)="goToSurvey()">Survey</div>
 </div>
