route to survey and first draft of bar chart

--- a/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
+++ b/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
@@ -7,7 +7,7 @@
         [options] = "barChartOptions"
         [plugins] = "barChartPlugins"
         [legend] = "barChartLegend"
-        [chartType] = "barChartType">
+        [type] = "barChartType">
       </canvas>
     </div>
     <button mat-button mat-raised-button color="primary" (click)="randomize()">Update</button>
