Route to emotion detail page

--- a/EmotionFrontend/src/app/emotion-detail/emotion-detail.component.css
+++ b/EmotionFrontend/src/app/emotion-detail/emotion-detail.component.css
@@ -1,5 +1,5 @@
 /* EmotionDetailComponent's private CSS styles */
-label {
+/* label {
   color: #435960;
   font-weight: bold;
 }
@@ -22,4 +22,4 @@ button:disabled {
   background-color: #eee;
   color: #ccc;
   cursor: auto;
-}
+} */
