--- a/EmotionFrontend/src/app/radar-chart/radar-chart.component.html
+++ b/EmotionFrontend/src/app/radar-chart/radar-chart.component.html
@@ -6,6 +6,7 @@
         [data]="radarChartData"
         [options]="radarChartOptions"
         [type]="radarChartType"
+        (chartClick)="handleChartClick()"
       >
       </canvas>
     </div>
