--- a/toh-pt6/src/app/statics/statics.component.html
+++ b/toh-pt6/src/app/statics/statics.component.html
@@ -5,4 +5,10 @@
     Test HttpClient
   </button>
 </div>
+<div>
+  <ul *ngFor="let item of emoReadWrite">
+    <li>{{item._id}} {{item.ActionType}} {{item.UserID}} {{item.Timestamp}} {{item.Anxious}} {{item.Anxious_Intensity}}</li>
+  </ul>
+</div>
 <!--{{Tests|json}}-->
+
