finish the reading/writing emotion selection then contribute

--- a/EmotionFrontend/src/app/statics/statics.component.html
+++ b/EmotionFrontend/src/app/statics/statics.component.html
@@ -1,9 +1,10 @@
+<app-popup></app-popup>
 <h2>Test HttpClient</h2>
 
 <div>
-  <button type="button" (click)="getData()">
+  <d-button type="button" bsStyle="primary" background-color="green" (click)="getData()">
     Test HttpClient
-  </button>
+  </d-button>
 </div>
 <div>
   <ul *ngFor="let item of emoReadWrite">
