--- a/EmotionFrontend/src/app/negative-barchart/negative-barchart.component.html
+++ b/EmotionFrontend/src/app/negative-barchart/negative-barchart.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div>
     <div class="container">
       <div style="display:block" class="barchart-container">
@@ -9,8 +10,6 @@
           [legend] = "barChartLegend"
           [type] = "barChartType">
         </canvas>
-      </div>
-      <button class="button-50" (click)="goToNegativeBarChart()">Negative Emotions</button>
+        </div>
     </div>
 </div>
-<app-reflect-button></app-reflect-button>
