added reflection history page

--- a/EmotionFrontend/src/app/reflect-form/reflect-form.component.html
+++ b/EmotionFrontend/src/app/reflect-form/reflect-form.component.html
@@ -22,7 +22,7 @@
         <span>Enter here</span>
     </li>
     <li>
-        <input type="submit" value="Send This" >
+        <input type="submit" value="Send This" (click)="goToReflectHistory()">
     </li>
     </ul>
 </form>
