connect bar chart to new page

--- a/EmotionFrontend/src/app/carousel/carousel.component.html
+++ b/EmotionFrontend/src/app/carousel/carousel.component.html
@@ -5,6 +5,11 @@
         class="fade"
     >
 
+    <div class="carousel-caption d-none d-md-block">
+        <h5>Joyful</h5>
+        <p>...</p>
+    </div>
+
     <div *ngIf="indicators" class="carousel-dot-container">
         <span *ngFor="let dot of images; let i=index" 
             class="dot"
