--- a/EmotionFrontend/src/app/negative-barchart/negative-barchart.component.html
+++ b/EmotionFrontend/src/app/negative-barchart/negative-barchart.component.html
@@ -8,7 +8,9 @@
           [options] = "barChartOptions"
           [plugins] = "barChartPlugins"
           [legend] = "barChartLegend"
-          [type] = "barChartType">
+          [type] = "barChartType"
+          (chartClick)="handleChartClick($event)"
+          >
         </canvas>
         </div>
     </div>
