--- a/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
+++ b/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
@@ -7,10 +7,10 @@
           [options] = "barChartOptions"
           [plugins] = "barChartPlugins"
           [legend] = "barChartLegend"
-          [type] = "barChartType">
+          [type] = "barChartType"
+          (chartClick)="handleChartClick($event)">
         </canvas>
       </div>
-      <button class="button-50" (click)="goToNegativeBarChart()">Negative Emotions</button>
     </div>
 </div>
 <app-reflect-button></app-reflect-button>
