Done: 1. Complete the dynamic data of the "survey bar chart", but the chart has animation, which will cause slow loading even no data. Also find all surveys conducted by EmoSurvey, place statics page 2. Complete the search for all reflections and EmoReg, and place the statics page 3. Complete the work of EmotionReadWrite's submit front-back-database 4. To finish adding the reflect form and database, you can just put the content into the formdata in the submit() function and submit it by clicking the Finish_Sumbit button of http://localhost:4200/reflect-form.

--- a/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
+++ b/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
@@ -2,6 +2,7 @@
     <div class="container">
       <div style="display:block" class="barchart-container">
         <canvas baseChart
+          class="chart"
           [datasets]= "barChartData"
           [labels] = "barChartLabels"
           [options] = "barChartOptions"
@@ -13,4 +14,6 @@
       </div>
     </div>
 </div>
+<!--          [datasets]= "barChartData"-->
+<!--[data]="barChartData"-->
 <app-reflect-button></app-reflect-button>
