--- a/EmotionFrontend/src/app/reflect-form/reflect-form.component.html
+++ b/EmotionFrontend/src/app/reflect-form/reflect-form.component.html
@@ -48,3 +48,6 @@
   <input type="submit" [value]="getButtonLabel()" (click)="handleButtonClick()" />
 </div>
 
+<div class="submit-block">
+  <input type="submit" [value]="'Finish_Submit'" (click)="submit()" />
+</div>
