configure the pop up read and write emotion submit

--- a/EmotionFrontend/src/app/popup-window/popup-window.component.html
+++ b/EmotionFrontend/src/app/popup-window/popup-window.component.html
@@ -13,7 +13,7 @@
       </d-form-item>
       <div *ngIf="isShow">
         <d-form-item>
-          <d-form-label>I feel</d-form-label>
+          <d-form-label>I feel (One star means "weak", Two stars means "normal", Three stars means "strong ")</d-form-label>
           <d-form-control [style.width.%]="80" >
             <section>
                   <d-select
