added buttons and radarchart data

--- a/EmotionFrontend/src/app/dashboard/dashboard.component.html
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,11 @@
 <app-header></app-header>
-<app-radar-chart></app-radar-chart>
-<app-reflect-button></app-reflect-button>
+<div class="dashboard-container">
+  <div class="left-section">
+    <app-radar-chart></app-radar-chart>
+  </div>
 
+  <div class="right-section">
+    <app-emotion-button></app-emotion-button>
+    <app-reflect-button></app-reflect-button>
+  </div>
+</div>
