--- a/EmotionFrontend/src/app/reflect-button/reflect-button.component.css
+++ b/EmotionFrontend/src/app/reflect-button/reflect-button.component.css
@@ -23,7 +23,8 @@
     -webkit-user-select: none;
     vertical-align: middle;
     white-space: nowrap;
-    margin-left: 80%;
+    margin-top: 45%;
+    margin-left: 60%;
   }
   
   .button-50:focus {
