--- a/EmotionFrontend/src/app/radar-chart/radar-chart.component.css
+++ b/EmotionFrontend/src/app/radar-chart/radar-chart.component.css
@@ -3,10 +3,10 @@ p {
 }
 
 .radarchart-container {
-    width: 100%;
     padding-left: 50px;
     overflow: hidden;
     display: block;
-    width: 40%;
+    width: 80%;
+    margin-top: 10px;
 }
 
