--- a/EmotionFrontend/src/app/radar-chart/radar-chart.component.html
+++ b/EmotionFrontend/src/app/radar-chart/radar-chart.component.html
@@ -2,6 +2,7 @@
   <div>
     <div class="radarchart-container">
       <canvas
+        #radarChart
         baseChart
         [data]="radarChartData"
         [options]="radarChartOptions"
