--- a/EmotionFrontend/src/app/scrollspy/scrollspy.component.html
+++ b/EmotionFrontend/src/app/scrollspy/scrollspy.component.html
@@ -8,13 +8,10 @@
 	  <div class="scrollspy-example scrollspy-container">
 		<section mdbScrollspyElement="scrollspy" id="example-1">
 		  <h3>Section 1</h3>
-		  <p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore earum natus vel
-			minima quod error maxime, molestias ut. Fuga dignissimos nisi nemo
-			necessitatibus quisquam obcaecati et reiciendis quaerat accusamus numquam.
-		  </p>
+			<p>What caused that emotion?</p> <br>
+			<p>Is there anything else you want to share?</p>
 		</section>
-		<section mdbScrollspyElement="scrollspy" id="example-2">
+		<!-- <section mdbScrollspyElement="scrollspy" id="example-2">
 		  <h3>Section 2</h3>
 		  <p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore earum natus vel
@@ -53,7 +50,7 @@
 			minima quod error maxime, molestias ut. Fuga dignissimos nisi nemo
 			necessitatibus quisquam obcaecati et reiciendis quaerat accusamus numquam.
 		  </p>
-		</section>
+		</section> -->
 	  </div>
 	</div>
   
@@ -68,15 +65,14 @@
 		  </li>
 		  <li class="nav-item">
 			<a mdbScrollspyLink="example-3" class="nav-link">Section 3</a>
-			<ul mdbScrollspy="scrollspy-2" class="nav flex-column ps-3" [collapsible]="true">
-				<!-- [collapsible]="true"> -->
+			<!-- <ul mdbScrollspy="scrollspy-2" class="nav flex-column ps-3" [collapsible]="true">
 			  <li class="nav-item">
 				<a mdbScrollspyLink="example-5" class="nav-link">Subsection A</a>
 			  </li>
 			  <li class="nav-item">
 				<a mdbScrollspyLink="example-6" class="nav-link">Subsection B</a>
 			  </li>
-			</ul>
+			</ul> -->
 		  </li>
 		  <li class="nav-item">
 			<a mdbScrollspyLink="example-4" class="nav-link">Section 4</a>
