--- a/EmotionFrontend/src/app/scrollspy/scrollspy.component.html
+++ b/EmotionFrontend/src/app/scrollspy/scrollspy.component.html
@@ -11,21 +11,21 @@
 			<p>What caused that emotion?</p> <br>
 			<p>Is there anything else you want to share?</p>
 		</section>
-		<!-- <section mdbScrollspyElement="scrollspy" id="example-2">
+		<section mdbScrollspyElement="scrollspy" id="example-2">
 		  <h3>Section 2</h3>
-		  <p>
+		  <!-- <p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore earum natus vel
 			minima quod error maxime, molestias ut. Fuga dignissimos nisi nemo
 			necessitatibus quisquam obcaecati et reiciendis quaerat accusamus numquam.
-		  </p>
+		  </p> -->
 		</section>
 		<section mdbScrollspyElement="scrollspy" id="example-3">
 		  <h3>Section 3</h3>
-		  <p>
+		  <!-- <p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore earum natus vel
 			minima quod error maxime, molestias ut. Fuga dignissimos nisi nemo
 			necessitatibus quisquam obcaecati et reiciendis quaerat accusamus numquam.
-		  </p>
+		  </p> 
 		  <section mdbScrollspyElement="scrollspy-2" id="example-5">
 			<h3>Subsection A</h3>
 			<p>
@@ -41,16 +41,16 @@
 			  vel minima quod error maxime, molestias ut. Fuga dignissimos nisi nemo
 			  necessitatibus quisquam obcaecati et reiciendis quaerat accusamus numquam.
 			</p>
-		  </section>
+		  </section>-->
 		</section>
 		<section mdbScrollspyElement="scrollspy" id="example-4">
 		  <h3>Section 4</h3>
-		  <p>
+		  <!-- <p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore earum natus vel
 			minima quod error maxime, molestias ut. Fuga dignissimos nisi nemo
 			necessitatibus quisquam obcaecati et reiciendis quaerat accusamus numquam.
-		  </p>
-		</section> -->
+		  </p> -->
+		</section>
 	  </div>
 	</div>
   
