--- a/EmotionFrontend/src/app/dashboard/dashboard.component.html
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.html
@@ -6,6 +6,7 @@
 
   <div class="right-section">
     <app-emotion-button></app-emotion-button>
+    <app-select-time-dropdown></app-select-time-dropdown>
     <app-reflect-button></app-reflect-button>
   </div>
 </div>
