done navigation from chart to diff pages

--- a/EmotionFrontend/src/app/carousel/carousel.component.html
+++ b/EmotionFrontend/src/app/carousel/carousel.component.html
@@ -5,7 +5,7 @@
         class="fade"
     >
     <div class="carousel-caption d-none d-md-block">
-        <h5>Joyful</h5>
+        <h5>{{title}}</h5>
         <p>...</p>
     </div>
 
