--- a/EmotionFrontend/src/app/radar-chart/radar-chart.component.html
+++ b/EmotionFrontend/src/app/radar-chart/radar-chart.component.html
@@ -7,7 +7,7 @@
         [data]="radarChartData"
         [options]="radarChartOptions"
         [type]="radarChartType"
-        (chartClick)="handleChartClick()"
+        (chartClick)="handleChartClick($event)"
       >
       </canvas>
     </div>
