--- a/EmotionFrontend/src/app/scrollspy/scrollspy.component.html
+++ b/EmotionFrontend/src/app/scrollspy/scrollspy.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="container">
 	<section>
-		<h3>Bored</h3>
+		<h3>{{title}}</h3>
 	</section>
 	<div class="d-flex flex-column flex-md-row" >
 	<div class="col-10" >
