added datepicker and changed reflect-form

--- a/EmotionFrontend/src/app/dashboard/dashboard.component.html
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="right-section">
-    <app-emotion-button></app-emotion-button>
+    <!-- <app-emotion-button></app-emotion-button> -->
     <app-select-time-dropdown></app-select-time-dropdown>
     <app-reflect-button></app-reflect-button>
   </div>
