--- a/EmotionFrontend/src/app/header/header.component.css
+++ b/EmotionFrontend/src/app/header/header.component.css
@@ -1,27 +1,38 @@
 .header-container {
-    width: 100%;
-    height: 80px;
-    background: rgb(238,174,202);
-    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  width: 100%;
+  height: 80px;
+  background: rgb(238, 174, 202);
+  background: radial-gradient(
+    circle,
+    rgba(238, 174, 202, 1) 0%,
+    rgba(148, 187, 233, 1) 100%
+  );
+  display: flex;
+  align-items: center;
 }
 
 .header-container .logo {
-    font-size: 24px;
-    color: azure;
-    font-weight: bold;
-    font-family: 'Times New Roman', cursive;
-    letter-spacing: 4px;
-    margin-left: 40px;
-    cursor: pointer;
+  font-size: 32px;
+  color: azure;
+  font-weight: bold;
+  font-family: "Times New Roman", cursive;
+  margin-left: 40px;
+  cursor: pointer;
 }
 
 .header-container .survey {
-    font-size: 18px;
-    color: azure;
-    font-weight: bold;
-    margin-right: 40px;
-    cursor: pointer;
+  font-size: 32px;
+  color: azure;
+  font-weight: bold;
+  font-family: "Times New Roman", cursive;
+  margin-left: 70px;
+  cursor: pointer;
+}
+
+.header-container .logo.active {
+  color: black; /* Apply grey color for the active state */
+}
+
+.header-container .survey.active {
+  color: black; /* Apply grey color for the active state */
 }
