--- a/EmotionFrontend/src/app/header/header.component.html
+++ b/EmotionFrontend/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header-container">
-    <div class="logo" (click)="goToHome()">Emotion Analytics</div>
-    <div class="survey" (click)="goToSurvey()">Survey</div>
+    <div class="logo" [ngClass]="{'active': activePage === 'dashboard'}" (click)="goToHome()">Note Emotion</div>
+    <div class="survey" [ngClass]="{'active': activePage === 'survey'}" (click)="goToSurvey()">Survey Emotion</div>
 </div>
