--- a/EmotionFrontend/src/app/scrollspy/scrollspy.component.html
+++ b/EmotionFrontend/src/app/scrollspy/scrollspy.component.html
@@ -6,13 +6,19 @@
 	<div class="d-flex flex-column flex-md-row" >
 	<div class="col-10" >
 	  <div class="scrollspy-example scrollspy-container">
-		<section mdbScrollspyElement="scrollspy" id="example-1">
-		  <!-- <h3>Section 1</h3>
-			<p>What caused that emotion?</p> <br>
-			<div *ngFor="let emoSurvey of filteredEmoSurveys">
-				<p>Reason: {{ emoSurvey.Reason }}</p>
-			  </div>
-			<p>Is there anything else you want to share?</p> -->
+		<div *ngFor="let emoSurvey of filteredEmoSurveys; let i = index">
+		<section [mdbScrollspyElement]="'scrollspy'" [id]="'example-' + (currentSectionNumber + i)">
+			  <h3>Section {{ currentSectionNumber + i }}</h3>
+			  <p>What caused that emotion?</p>
+			  <p>{{ emoSurvey.Reason }}</p>
+			  <p>Is there anything else you want to share?</p>
+			  <p>{{ emoSurvey.Remarks }}</p>
+			  <hr>
+			
+		  </section>
+		</div>
+		  
+		<!-- <section mdbScrollspyElement="scrollspy" id="example-1">
 			<div *ngFor="let emoSurvey of filteredEmoSurveys; let i = index">
 				<h3>Section {{ currentSectionNumber + i }}</h3>
 				<p>What caused that emotion?</p>
@@ -21,7 +27,15 @@
 				<p>{{emoSurvey.Remarks}}</p>
 				<hr>
 			  </div>
-		</section>
+		</section> -->
+
+		 <!-- <h3>Section 1</h3>
+			<p>What caused that emotion?</p> <br>
+			<div *ngFor="let emoSurvey of filteredEmoSurveys">
+				<p>Reason: {{ emoSurvey.Reason }}</p>
+			  </div>
+			<p>Is there anything else you want to share?</p> -->
+
 		<!-- <section mdbScrollspyElement="scrollspy" id="example-2">
 		  <h3>Section 2</h3>
 		</section>
@@ -36,10 +50,15 @@
   
 	<div class="col-2">
 	  <div id="scrollspy" class="sticky-top" style="height: 100%; z-index: 1;">
-		<ul mdbScrollspy="scrollspy" class="nav flex-column nav-pills menu-sidebar">
+		<ul [mdbScrollspy]="'scrollspy'" class="nav flex-column nav-pills menu-sidebar">
+			<li class="nav-item" *ngFor="let emoSurvey of filteredEmoSurveys; let i = index">
+			  <a [mdbScrollspyLink]="'example-' + (currentSectionNumber + i)" class="nav-link">Section {{ currentSectionNumber + i }}</a>
+			</li>
+		  
+		<!-- <ul mdbScrollspy="scrollspy" class="nav flex-column nav-pills menu-sidebar">
 		  <li class="nav-item" *ngFor="let emoSurvey of filteredEmoSurveys; let i = index">
 			<a mdbScrollspyLink="example-1" class="nav-link">Section {{ currentSectionNumber + i }}</a>
-		  </li>
+		  </li> -->
 		  <!-- <li class="nav-item">
 			<a mdbScrollspyLink="example-2" class="nav-link">Section 2</a>
 		  </li>
