started time filtering function

--- a/EmotionFrontend/src/app/select-time-dropdown/select-time-dropdown.component.html
+++ b/EmotionFrontend/src/app/select-time-dropdown/select-time-dropdown.component.html
@@ -2,6 +2,5 @@
 
 <d-range-datepicker-pro 
   [(ngModel)]="value" 
-  (ngModelChange)="onChange($event)" 
-  cssClass="custom-datepicker">
+  (ngModelChange)="onSelectTime($event)" >
 </d-range-datepicker-pro>
