--- a/EmotionFrontend/src/app/survey/survey.component.html
+++ b/EmotionFrontend/src/app/survey/survey.component.html
@@ -1,2 +1,8 @@
 <app-header></app-header>
 <app-bar-chart></app-bar-chart>
+
+<div style="display: flex; justify-content: center; align-items: center;">
+    <app-select-time-dropdown></app-select-time-dropdown>
+    <app-reflect-button></app-reflect-button>
+</div>
+
