--- a/EmotionFrontend/src/app/statics/statics.component.html
+++ b/EmotionFrontend/src/app/statics/statics.component.html
@@ -1,6 +1,6 @@
 <app-popup></app-popup>
 <h2>Test HttpClient</h2>
-
+<app-select-time-dropdown/>
 <div>
   <d-button type="button" bsStyle="primary" background-color="green" (click)="getEmoReadWrite()">
     Test getEmoReadWrite
