--- a/EmotionFrontend/src/app/select-time-dropdown/select-time-dropdown.component.html
+++ b/EmotionFrontend/src/app/select-time-dropdown/select-time-dropdown.component.html
@@ -1,6 +1,32 @@
 <h5>Select Time Frame: </h5>
+<!--<d-range-datepicker-pro -->
+<!--  [(ngModel)]="value" -->
+<!--  (ngModelChange)="onSelectTime($event)" >-->
+<!--</d-range-datepicker-pro>-->
 
-<d-range-datepicker-pro 
-  [(ngModel)]="value" 
-  (ngModelChange)="onSelectTime($event)" >
-</d-range-datepicker-pro>
+<!--<mat-form-field appearance="fill">-->
+<!--  <mat-label>Enter a date range</mat-label>-->
+<!--  <mat-date-range-input [rangePicker]="picker">-->
+<!--    <input matStartDate placeholder="Start date">-->
+<!--    <input matEndDate placeholder="End date">-->
+<!--  </mat-date-range-input>-->
+<!--  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>-->
+<!--  <mat-date-range-picker #picker></mat-date-range-picker>-->
+<!--</mat-form-field>-->
+
+<mat-form-field appearance="fill">
+  <mat-label>Enter a date range</mat-label>
+  <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+    <input matStartDate formControlName="start" placeholder="Start date">
+    <input matEndDate formControlName="end" placeholder="End date">
+  </mat-date-range-input>
+  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-date-range-picker #picker></mat-date-range-picker>
+
+  <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+  <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+</mat-form-field>
+
+<p>Selected range: {{range.value | json}}</p>
+
+
