--- a/EmotionFrontend/src/styles.css
+++ b/EmotionFrontend/src/styles.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap");
-
+@import "~ng-zorro-antd/style/index.min.css"; /* 引入基本样式 */
+/*@import "~ng-zorro-antd/button/style/index.min.css"; !* 引入组件样式 *!*/
 body {
   font-family: "Roboto", sans-serif;
 }
